# memoro

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  FRONTEND_GUIDE.md  README.md  claude.md  docker-compose.yml  justfile  openapi.json  pyproject.toml
.claude/commands/: commit-and-push.md  update-docs.md
.github/workflows/: ci.yml
Memoro API/: bruno.json  collection.bru
Memoro API/contacts/: Delete Contact.bru  Get Contact.bru  List Contact Interactions.bru  List Contacts.bru  Update Contact.bru
Memoro API/interactions/: Analyze Interaction Endpoint.bru  Confirm Interaction Endpoint.bru  folder.bru
alembic/: env.py
alembic/versions/: 72052229f181_enable_pg_trgm_extension.py  d892e083fe19_initial_schema.py
backend/: Dockerfile
backend/app/: __init__.py  config.py  constants.py  db.py  exceptions.py  logger.py  main.py  models.py
backend/app/prompts/: extract_interaction.txt
backend/app/routers/: contacts.py  interactions.py  search.py  ui.py
backend/app/services/: contacts.py  interactions.py  llm.py  search.py
backend/app/sql/contacts/: count.sql  count_interactions.sql  delete.sql  family_members_with_details.sql  find_or_create.sql  get_by_id.sql  last_interaction_date.sql  list.sql  recent_interactions.sql  update.sql  update_latest_news.sql
backend/app/sql/family_members/: create.sql
backend/app/sql/interactions/: create.sql  delete.sql  update.sql  (+2 more)
backend/app/templates/: base.html  contact_profile.html  index.html
backend/tests/: __init__.py  conftest.py  test_contacts.py  test_interactions.py  test_network_blocking.py  test_relationship_mapping.py  test_search.py  test_ui.py
(+20 files in other folders)
